--- a/src/scss/themes/theme-dark.scss
+++ b/src/scss/themes/theme-dark.scss
@@ -3,7 +3,7 @@ body[data-theme="dark"] {
    @import '../src/scss/dark-slider.scss';
 
    .slider-tab {
-      background-color: #8C8C8C;
+      background-color: #545B5A;
    }
 
    .title-styles {
@@ -11,7 +11,7 @@ body[data-theme="dark"] {
    }
 
    .header-icon {
-      color: #3C342C;
+      color: white;
       opacity: 0.8;
    }
 
@@ -20,7 +20,7 @@ body[data-theme="dark"] {
    }
 
    .language {
-      background-color: #494949;
+      background-color: #545B5A;
    }
 
    .link-href {
@@ -28,12 +28,12 @@ body[data-theme="dark"] {
    }
 
    .project-date {
-      background-color: #918e97;
+      background-color: #545B5A;
       color: white;
    }
 
    header {
-      background-color: #494949;
+      background-color: #545B5A;
       h1 {
          color: white;
       }
@@ -45,16 +45,16 @@ body[data-theme="dark"] {
          color: white;
       }
       .polaroid span {
-         background:  #6d6d6d;
+         background:  #545B5A;
       }
       .card {
-         background: #6d6d6d;
+         background: #545B5A;
          color: white;
       }
    }
 
    #portfolio {
-      background: #5b5b5b;
+      background: #545B5A;
       .section-title {
          color: white !important;
       }
